@@ -4,24 +4,38 @@ ClamExtractorExample \- Extracts music features from audio
 .SH SYNOPSIS
 .B ClamExtractorExample [-s] [-f <suffix>] <wavefile1> <wavefile2> ...
 .SH DESCRIPTION
+.PP
+Extracts low level descriptors and id3 information usitable for \fBAnnotator\fR
 .SH OPTIONS
-.IP -h
+.TP
+-h
 shows this help
-.IP -s
+.TP
+-s
 dump the schema to the standard output
-.IP -f <suffix>
-append <suffix> to the generated descriptors file (default: '.pool')
-.IP -p <project>
+.TP
+-f suffix
+append suffix to the generated descriptors file (default: '.pool')
+.TP
+-p project
 Generates a dummy project with all the wave files
 .SH EXAMPLES
+Dump the schema into schema.sc
+
 	ClamExtractorExample -s schema.sc
-		Dumps the schema into schema.sc
+
+Dump song1.wav.beats, song2.mp3.beats and song3.ogg.beats with the extracted description.
+
 	ClamExtractorExample -f .beats song1.wav song2.mp3 song3.ogg
-		Dumps song1.wav.beats, song2.mp3.beats and song3.ogg.beats with the extracted description.
+
+Generate the project file and the schema file with default settings.
+
 	ClamExtractorExample -p path/to/project/Project.pro
-		Generates the project file and the schema file with default settings.
+
+Generate the project and the schema using .beats as suffix and generating all the descriptions.
+
 	ClamExtractorExample -p path/to/project/Project.pro -f .beats path/to/project/*.{wav,ogg,mp3}
-		Generats teh project and the schema using .beats as suffis and generating all the descriptions.
+
 .SH AUTHOR
 CLAM development team (clam (at) iua.upf.es)
 .SH SEE ALSO
