@@ -1,8 +1,12 @@
 clam-annotator (0.3.2-1) unstable; urgency=low
 
   * New upstream release
+  * References to CLAM library names changed
+  * Added BocaClient and Extractors
+  * Lintian
+  * Icons and menus
 
- -- David García <dgarcia@iua.upf.es>  Tue,  92 June 2006 17:30:21 +0100
+ -- CLAM Team <clam@iua.upf.es>  Tue,  10 Jun 2006 17:30:21 +0100
 
 clam-annotator (0.3.1-1) unstable; urgency=low
 
@@ -14,4 +18,5 @@ clam-annotator (0.2.0-1) unstable; urgency=low
 
   * First 0.2 official release
 
- -- Pau Arumí <parumi@iua.upf.es>  Wed,  8 Feb 2006 12:43:31 +0100
+ -- Pau Arumí­ <parumi@iua.upf.es>  Wed,  8 Feb 2006 12:43:31 +0100
+
